--- a/main.ipynb
+++ b/main.ipynb
@@ -129,7 +129,7 @@
    "id": "7e6da0a9",
    "metadata": {},
    "source": [
-    "## III. DATA EXPLORATION"
+    "## II. DATA EXPLORATION"
    ]
   },
   {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "621e4b2d",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,6 @@
     }
    ],
    "source": [
-    "# Đọc dữ liệu\n",
     "data_path = \"data/BankChurners.csv\"\n",
     "df = pd.read_csv(data_path)\n",
     "df.head()"
@@ -4143,7 +4142,7 @@
    "id": "e52b8ab7",
    "metadata": {},
    "source": [
-    "#### **3. Nhóm tuổi nào trong dữ liệu có tỷ lệ churn cao và thấp nhất?**"
+    "#### **3. Nhóm tuổi nào trong dữ liệu có tỷ lệ rời bỏ cao và thấp nhất?**"
    ]
   },
   {
@@ -4168,7 +4167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "5aa1b067",
    "metadata": {},
    "outputs": [
@@ -4273,7 +4272,7 @@
     "    ordered=True,\n",
     ")\n",
     "\n",
-    "age_df[['Customer_Age', 'age_group', 'Attrition_Flag', 'is_churn']].head()\n"
+    "age_df[['Customer_Age', 'age_group', 'Attrition_Flag', 'is_churn']].head()"
    ]
   },
   {
@@ -4281,7 +4280,7 @@
    "id": "1e6ef40b",
    "metadata": {},
    "source": [
-    "### B. Phân tích (Analysis)\n",
+    "### B. Phân tích\n",
     "- Tính số khách hàng, số churn và tỷ lệ churn cho từng `age_group`.\n",
     "- Gắn nhãn nhóm có tỷ lệ cao nhất/thấp nhất để nổi bật trong bảng thống kê.\n"
    ]
@@ -4446,7 +4445,7 @@
    "id": "9ad95137",
    "metadata": {},
    "source": [
-    "### C. Trực quan hóa, kết quả và phân tích ( Visualization, Results & Interpretation)\n",
+    "### C. Trực quan hóa, kết quả và phân tích\n",
     "- Biểu đồ cột thể hiện tỷ lệ churn theo nhóm tuổi có kèm đường chuẩn toàn bộ.\n",
     "- Biểu đồ tròn mô tả tỷ trọng số khách hàng churn đến từ từng nhóm tuổi.\n"
    ]
@@ -5892,7 +5891,7 @@
    "id": "37dd102f",
    "metadata": {},
    "source": [
-    "### Future Directions (If You Had More Time)\n",
+    "### Future Directions \n",
     "- Mở rộng câu hỏi: churn theo chuỗi thời gian, tác động của chiến dịch CSKH và ưu đãi tái kích hoạt.\n",
     "- Phân tích sâu: mô hình cảnh báo sớm theo thời điểm, phân đoạn hành vi theo kênh số.\n",
     "- Phương pháp thay thế: thử Gradient Boosting/XGBoost, so sánh với mô hình tuyến tính để cân bằng hiệu năng–giải thích.\n",
