--- a/main.ipynb
+++ b/main.ipynb
@@ -1801,7 +1801,7 @@
    "id": "e2945fde",
    "metadata": {},
    "source": [
-    "### A. Tiền xử lý (Preprocessing)\n",
+    "### A. Tiền xử lý\n",
     "\n",
     "1. Kiểm tra và chuẩn hóa kiểu dữ liệu\n",
     "- Mục đích: Đảm bảo `Customer_Age` và `Months_on_book` có kiểu số (numeric), `Attrition_Flag` được chuyển thành nhãn nhị phân `is_churn` (0/1) để tính toán và phân tích chính xác.\n",
@@ -1810,7 +1810,7 @@
     "- Mục đích: Phát hiện các bản ghi thiếu giá trị ở các cột phân tích. Missing values có thể gây lỗi hoặc làm sai lệch kết quả thống kê, cần loại bỏ hoặc xử lý trước khi phân tích.\n",
     "\n",
     "3. Kiểm tra và xử lý ngoại lai (outliers)\n",
-    "- Mục đích: Phát hiện các giá trị bất thường trong `Customer_Age` và `Months_on_book` bằng phương pháp IQR. Outliers có thể làm lệch các chỉ số trung bình và ảnh hưởng đến kết quả tương quan, cần đánh giá và quyết định giữ/loại bỏ.\n",
+    "- Mục đích: Phát hiện các giá trị bất thường trong `Customer_Age` và `Months_on_book` bằng phương pháp IQR.\n",
     "\n",
     "4. Phân nhóm tuổi và thời gian sử dụng thẻ\n",
     "- Mục đích: Chia tuổi và thời gian sử dụng thẻ thành các nhóm rời rạc để so sánh tỷ lệ churn giữa các phân khúc khách hàng một cách trực quan và dễ hiểu hơn."
@@ -2275,7 +2275,7 @@
     "**3. Phát hiện bất ngờ:**\n",
     "\n",
     "- **Churn cao nhất ở nhóm hạn mức THẤP, không phải hạn mức CAO** - ngược với trực giác ban đầu.\n",
-    "- **Giải thích:** Khách hàng được cấp hạn mức thấp có thể cảm thấy không được ngân hàng đánh giá cao, hoặc thẻ không đáp ứng nhu cầu chi tiêu của họ. Khi họ \"đóng băng\" thẻ (sử dụng rất thấp), đó là tín hiệu mạnh cho thấy họ đã chuyển sang sản phẩm khác và chuẩn bị rời bỏ. Ngược lại, khách hạn mức cao có thể đã có mối quan hệ tốt với ngân hàng nên dù không dùng nhiều, họ vẫn giữ thẻ như \"backup\"."
+    "- **Giải thích:** Khách hàng được cấp hạn mức thấp có thể cảm thấy không được ngân hàng đánh giá cao, hoặc thẻ không đáp ứng nhu cầu chi tiêu của họ. Khi họ \"đóng băng\" thẻ (sử dụng rất thấp), đó là tín hiệu mạnh cho thấy họ đã chuyển sang sản phẩm khác và chuẩn bị rời bỏ. Ngược lại, khách hạn mức cao có thể đã có mối quan hệ tốt với ngân hàng nên dù không dùng nhiều, họ vẫn giữ thẻ như 1 sự dự phòng."
    ]
   },
   {
@@ -2364,7 +2364,7 @@
    "source": [
     "### B. Phân tích\n",
     "\n",
-    "1. So sánh thống kê mô tả giữa nhóm churn và giữ chân\n",
+    "1. So sánh thống kê mô tả giữa nhóm churn và non-churn\n",
     "- Thực hiện: Tính mean, median, std của 4 biến hành vi cho từng nhóm `is_churn` để phát hiện sự khác biệt.\n",
     "\n",
     "2. Phân tích tỷ lệ churn theo tứ phân vị của từng biến\n",
@@ -2390,7 +2390,7 @@
     ")\n",
     "summary_stats.index = summary_stats.index.map({0: 'Existing Customer', 1: 'Attrited Customer'})\n",
     "display(summary_stats)\n",
-    "print(\"Nhận xét: Khách hàng rời đi có số tháng không hoạt động và số lần liên hệ cao hơn\")\n",
+    "print(\"Nhận xét: Khách hàng rời đi (Attrited Customer) có số tháng không hoạt động và số lần liên hệ cao hơn\")\n",
     "print(\"Ngược lại, tổng số giao dịch (Trans_Ct) và tổng giá trị giao dịch (Trans_Amt) thấp hơn đáng kể\")"
    ]
   },
@@ -2401,6 +2401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Phân phối các biến hành vi theo trạng thái churn\n",
     "plot_df = behavior_df.assign(\n",
     "    churn_label=behavior_df['is_churn'].map({0: 'Existing', 1: 'Attrited'})\n",
     ")\n",
@@ -2466,7 +2467,7 @@
     "Nhận xét: \n",
     "\n",
     "- Khách hàng không hoạt động 3+ tháng có tỷ lệ churn cao nhất.\n",
-    "- Khách hàng liên hệ ngân hàng nhiều (4+ lần) cũng có nguy cơ churn cao.\n",
+    "- Khách hàng liên hệ ngân hàng nhiều (3 đến 6 lần) cũng có nguy cơ churn cao.\n",
     "- Khách hàng tổng lượng giao dịch thấp sẽ có nguy cơ churn cao.\n",
     "- Nhóm có Total_Trans_Ct thấp nhất (Q1) có tỷ lệ churn rất cao."
    ]
@@ -2507,7 +2508,6 @@
    "metadata": {},
    "source": [
     "### C. Triển khai mô hình và đánh giá\n",
-    "- Tập trung xác định phân khúc churn cao nhất trong từng biến bằng cách đọc bảng tứ phân vị.\n",
     "- Chạy mô hình dự báo dựa trên bốn biến hành vi để kiểm tra khả năng phân biệt churn và trích xuất insight phục vụ hành động."
    ]
   },
@@ -2595,7 +2595,9 @@
    "id": "ee803e9f",
    "metadata": {},
    "source": [
-    "Nhận xét: cả 2 đều có độ chính xác >0.75 và ROC_AUC cao >0.85 cho thấy khả năng dự báo tốt của 2 mô hình."
+    "Nhận xét: \n",
+    "- Cả 2 mô hình đều có độ chính xác >0.75 cho thấy khả năng dự báo tốt. Đặc biệt là Random Forest.\n",
+    "- Chỉ số ROC_AUC cao >0.85 cho thấy khả năng phân biệt tốt giữa 2 lớp churn và không churn mặc dù biến mục tiêu bị mất cân bằng."
    ]
   },
   {
@@ -2663,7 +2665,7 @@
    "metadata": {},
    "source": [
     "Nhận xét: \n",
-    "- Đường cong ROC của cả 2 mô hình đều nằm xa đường ngẫu nhiên.\n",
+    "- Đường cong ROC của cả 2 mô hình đều nằm nằm sát góc trái phía trên và xa đường ngẫu nhiên.\n",
     "- Điều này xác nhận các biến hành vi giao dịch có khả năng dự báo churn tốt.\n",
     "- Random Forest có khả năng dự đoán tốt hơn Logistic Regression."
    ]
@@ -2706,8 +2708,7 @@
    "source": [
     "Nhận xét: \n",
     "- Total_Trans_Ct là biến quan trọng nhất trong cả 2 mô hình\n",
-    "- Hệ số âm của Total_Trans_Ct trong Logistic cho thấy giao dịch nhiều → giảm churn\n",
-    "- Contacts_Count có hệ số dương - liên hệ nhiều → tăng nguy cơ churn (có thể do khiếu nại)"
+    "- Hệ số âm của Total_Trans_Ct trong Logistic cho thấy giao dịch nhiều → giảm churn"
    ]
   },
   {
@@ -2750,7 +2751,7 @@
     "\n",
     "> *\"Các hành vi giao dịch trong 12 tháng gần nhất có thể dự báo churn không? Các biến Months_Inactive_12_mon, Contacts_Count_12_mon, Total_Trans_Amt, Total_Trans_Ct có liên quan mạnh tới việc khách bỏ đi không?\"*\n",
     "\n",
-    "- **Kết luận:** **CÓ.** Các biến hành vi giao dịch có khả năng dự báo churn tốt. Mô hình Random Forest đạt **ROC AUC = 0.82**, Logistic Regression đạt **ROC AUC = 0.77**, cho thấy hành vi giao dịch là chỉ báo mạnh để nhận diện khách hàng có nguy cơ rời bỏ.\n",
+    "- **Kết luận:** **CÓ.** Các biến hành vi giao dịch có khả năng dự báo churn tốt. Mô hình Random Forest đạt **ROC AUC = 0.95**, Logistic Regression đạt **ROC AUC = 0.86**, cho thấy hành vi giao dịch là chỉ báo mạnh để nhận diện khách hàng có nguy cơ rời bỏ.\n",
     "- Trong đó **Total_Trans_Ct ↔ is_churn:** là feature có tác động lớn nhất. Hệ số tương quan = **-0.37**.\n",
     "\n",
     "**2. Giải pháp thực tiễn:**\n",
