--- a/main.ipynb
+++ b/main.ipynb
@@ -1636,11 +1636,10 @@
     "1. Pivot Table Aggregation\n",
     "- Tạo một bảng tổng hợp dạng ma trận, tính trung bình Avg_Utilization_Ratio cho mỗi cặp (Thu nhập, Học vấn).\n",
     "2. Two-Way ANOVA:\n",
-    "- Chúng ta có 2 biến định danh (Income, Education) và 1 biến định lượng (Utilization). T-test chỉ so sánh được 2 nhóm, trong khi ở đây ta có nhiều nhóm con.\n",
-    "- Mục tiêu: Kiểm định xem sự khác biệt về Utilization là do Thu nhập, do Học vấn, hay do sự tương tác (interaction) giữa cả hai.\n",
-    "3. Visualization Strategy:\n",
-    "- Heatmap: Để nhìn toàn cảnh (Big Picture).\n",
-    "- Point Plot / Box Plot: Để so sánh chi tiết khoảng tin cậy (Confidence Interval) giữa các mức học vấn trong từng mức thu nhập."
+    "- Chúng ta có 2 biến categorical (Income, Education) và 1 biến numerical (Utilization). \n",
+    "- Áp dụng mô hình ANOVA với các biến đã chọn\n",
+    "\n",
+    "*ANOVA(Analysis of Variance) là một phương pháp kiểm định thống kê cho phép phân tích ảnh hưởng của một hoặc nhiều biến."
    ]
   },
   {
@@ -1675,11 +1674,21 @@
     "    anova_table = sm.stats.anova_lm(model, typ=2)\n",
     "    \n",
     "    print(\"Two-Way ANOVA Results:\")\n",
-    "    print(anova_table)\n",
+    "    print(anova_table.round(2))\n",
     "    \n",
     "    return pivot_table, anova_table\n",
     "\n",
     "pt, anova = analyze_utilization_trends(df2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bdfcfce",
+   "metadata": {},
+   "source": [
+    "Nhận xét:\n",
+    "- p_value(PR) của biến độc lập C bé hơn 0.05, do đó Income_Category có ảnh hưởng đến tỉ lệ sử dụng\n",
+    "- Ngược lại, Education_Leval và tương tác giữa Income_Category với Education_Level lại không ảnh hưởng gì đến tỉ lệ sử dụng"
    ]
   },
   {
@@ -1697,11 +1706,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- VISUALIZATION FUNCTION ---\n",
     "def visualize_results(df_clean, pivot_table):\n",
     "    plt.figure(figsize=(18, 8))\n",
     "\n",
-    "    # PLOT 1: Heatmap - Cái nhìn tổng quan\n",
+    "    # PLOT 1: Heatmap\n",
     "    plt.subplot(1, 2, 1)\n",
     "    sns.heatmap(\n",
     "        pivot_table, \n",
@@ -1714,7 +1722,7 @@
     "    plt.ylabel('Education Level')\n",
     "    plt.xlabel('Income Category')\n",
     "\n",
-    "    # PLOT 2: Point Plot - So sánh chi tiết với Khoảng tin cậy (95% CI)\n",
+    "    # PLOT 2: Point Plot\n",
     "    plt.subplot(1, 2, 2)\n",
     "    sns.pointplot(\n",
     "        data=df_clean, \n",
@@ -1745,17 +1753,17 @@
    "metadata": {},
    "source": [
     "- Kết quả trực tiếp:\n",
-    "    - Yếu tố Thu nhập: Có tác động cực kỳ mạnh mẽ. Nhóm khách hàng có thu nhập thấp (Less than $40K) có tỷ lệ sử dụng hạn mức (Avg_Utilization_Ratio) cao nhất, thường dao động quanh mức 35-40%. Ngược lại, nhóm thu nhập cao nhất ($120K+) chỉ sử dụng khoảng 5-10% hạn mức.\n",
+    "    - Yếu tố Thu nhập: Có tác động cực kỳ mạnh mẽ. Nhóm khách hàng có thu nhập thấp (Less than $40K) có tỷ lệ sử dụng hạn mức cao nhất, thường dao động quanh mức 30-35%. Ngược lại, nhóm thu nhập cao nhất ($120K+) chỉ sử dụng khoảng 10-15% hạn mức.\n",
     "\n",
-    "    Lý do: Ngân hàng thường cấp hạn mức (Credit Limit) dựa trên thu nhập. Nhóm thu nhập thấp có hạn mức thấp (ví dụ: 20 triệu). Chỉ cần tiêu 10 triệu, tỷ lệ sử dụng đã là 50% trong khi đó, nhóm thu nhập cao có hạn mức rất lớn (ví dụ: 500 triệu). Dù họ tiêu gấp đôi nhóm kia (20 triệu), tỷ lệ sử dụng chỉ là 4%.\n",
-    "    - Yếu tố Học vấn: Kết quả ANOVA và biểu đồ cho thấy yếu tố này rất yếu hoặc không có ý nghĩa thống kê (P-value > 0.05). Trong cùng một mức thu nhập, một Tiến sĩ (Doctorate) và một người không có bằng cấp (Uneducated) có hành vi sử dụng hạn mức gần như tương đương nhau.\n",
+    "    Lý do: Ngân hàng thường cấp hạn mức dựa trên thu nhập. Nhóm thu nhập thấp có hạn mức thấp (ví dụ: 20 triệu). Chỉ cần tiêu 10 triệu, tỷ lệ sử dụng đã là 50% trong khi đó, nhóm thu nhập cao có hạn mức rất lớn (ví dụ: 500 triệu). Dù họ tiêu gấp đôi nhóm kia (20 triệu), tỷ lệ sử dụng chỉ là 4%.\n",
+    "    - Yếu tố Học vấn: Kết quả ANOVA và biểu đồ cho thấy yếu tố này rất yếu hoặc không có ý nghĩa thống kê (P-value > 0.05). Trong cùng một mức thu nhập, một Tiến sĩ và một người không có bằng cấp có hành vi sử dụng hạn mức gần như tương đương nhau.\n",
     "    Giả thuyết ban đầu: Giả thuyết \"người có học vấn thấp vung tay quá trán\" đã bị bác bỏ.\n",
-    "- Giải pháp thực tiễn (Actionable Insight):\n",
-    "    - Tập trung vào Thu nhập để phân khúc (Segmentation): Chiến lược Marketing và Quản trị rủi ro nên xoay quanh trục Income_Category.\n",
-    "    - Nhóm thu nhập thấp có Utilization cao: Rủi ro nợ xấu tiềm ẩn, nhưng cũng là nguồn thu lãi (interest income) lớn.\n",
-    "    - Nhóm thu nhập cao có Utilization thấp: Rủi ro thấp, nhưng ít sinh lãi từ dư nợ quay vòng. Cần thúc đẩy họ bằng phí giao dịch (interchange fee) qua các chương trình khuyến mãi.\n",
-    "- Bất ngờ (Surprise Finding):\n",
-    "Trình độ học vấn không phải là yếu tố dự báo tốt cho hành vi rủi ro tín dụng trong tập dữ liệu này. Điều này giúp ngân hàng đơn giản hóa mô hình chấm điểm tín dụng (Credit Scoring) bằng cách giảm trọng số hoặc loại bỏ biến Education_Level."
+    "- Giải pháp thực tiễn:\n",
+    "    - Tập trung vào Thu nhập để phân khúc: Chiến lược Marketing và Quản trị rủi ro nên xoay quanh biến Income_Category.\n",
+    "    - Nhóm thu nhập thấp có Utilization cao: Rủi ro nợ xấu tiềm ẩn, nhưng cũng là nguồn thu lãi lớn.\n",
+    "    - Nhóm thu nhập cao có Utilization thấp: Rủi ro thấp, nhưng ít sinh lãi từ dư nợ quay vòng. Cần thúc đẩy họ bằng phí giao dịch qua các chương trình khuyến mãi.\n",
+    "- Bất ngờ:\n",
+    "Trình độ học vấn không phải là yếu tố dự báo tốt cho hành vi rủi ro tín dụng trong tập dữ liệu này. Điều này giúp ngân hàng đơn giản hóa mô hình chấm điểm tín dụng bằng cách giảm trọng số hoặc loại bỏ biến Education_Level."
    ]
   },
   {
