--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,10 @@
    "id": "09d0348f",
    "metadata": {},
    "source": [
-    "# P4DS Final Project: BankChurners Dataset\n",
+    "# ĐỒ ÁN CUỐI KỲ: Phân tích tỉ lệ rời bỏ của khách hàng trong BankChurners Dataset\n",
+    "Môn học: CSC17104 – Lập trình cho Khoa học Dữ liệu\n",
+    "\n",
+    "Khoa: Công nghệ Thông tin - ĐH KHTN, ĐHQG-HCM\n",
     "\n",
     "Nhóm 26:\n",
     "Sinh viên thực hiện:\n",
@@ -32,13 +35,7 @@
     "- Ngành ngân hàng chịu áp lực lớn trong việc giữ chân khách hàng thẻ tín dụng; nếu khách đóng tài khoản thì doanh thu từ phí và lãi giảm đáng kể.\n",
     "\n",
     "\n",
-    "- Bộ dữ liệu BankChurners ghi nhận hồ sơ khách hàng cá nhân, thói quen sử dụng thẻ, tương tác dịch vụ và trạng thái rời bỏ (`Attrition_Flag`) để đo lường khả năng trung thành.\n",
-    "\n",
-    "\n",
-    "- Mục tiêu: xây dựng nền tảng phân tích để nhận diện sớm nguy cơ rời bỏ, từ đó đề xuất chương trình chăm sóc hoặc ưu đãi phù hợp giúp duy trì khách hàng giá trị.\n",
-    "\n",
-    "\n",
-    "- Việc mô hình hóa churn hỗ trợ nhóm kinh doanh tối ưu chi phí marketing, đồng thời cải thiện trải nghiệm khách hàng dựa trên hành vi thực tế."
+    "- Bộ dữ liệu BankChurners ghi nhận hồ sơ khách hàng cá nhân, thói quen sử dụng thẻ, tương tác dịch vụ và trạng thái rời bỏ (`Attrition_Flag`) để đo lường khả năng ở lại hay rời đi của khách hàng."
    ]
   },
   {
@@ -451,7 +448,7 @@
    "id": "d7cd50cb",
    "metadata": {},
    "source": [
-    "##### Các cột có kiểu dữ liệu không thích hợp\n",
+    "##### Có cột nào có kiểu dữ liệu không thích hợp không?\n",
     "- Nhìn chung thì các cột đều có dữ liệu phù hợp"
    ]
   },
@@ -803,7 +800,7 @@
    "id": "48674667",
    "metadata": {},
    "source": [
-    "Nhìn nhanh vào các biến phân loại cho thấy khách hàng còn sử dụng thẻ (Existing) chiếm đa số (~84%), hạng thẻ Blue áp đảo, trong khi các hạng cao hơn và trạng thái churn khá ít nên cần cân nhắc kỹ khi trực quan hoặc xây dựng mô hình."
+    "Nhìn nhanh vào các biến phân loại cho thấy khách hàng còn sử dụng thẻ (Existing) chiếm đa số (~84%), hạng thẻ Blue áp đảo nên cần cân nhắc kỹ khi trực quan hoặc xây dựng mô hình."
    ]
   },
   {
@@ -1237,7 +1234,7 @@
     "- Các cột categorical:\n",
     "    - Chứa các giá trị Nan đã được xử lý về giá trị 'Unknown'\n",
     "    - Phân phối dữ liệu đang khá cân bằng, một số cột bị lệch phải\n",
-    "    - Một vài cột bị mất cân bằng nặng(Card_Category, Attrited_Flag) đang bị mất cân bằng nặng, cần tiền xử lý nếu sử dụng mô hình\n",
+    "    - Một vài cột bị mất cân bằng nặng(Card_Category, Attrited_Flag) cần tiền xử lý nếu sử dụng mô hình\n",
     "- Các cột numerical:\n",
     "    - Không chứa giá trị Nan nào\n",
     "    - Một số cột chứa Outliers nhưng không quá bất thường"
@@ -1286,9 +1283,9 @@
     "| The Question | Motivation | Benefits & Real-world Decision |\n",
     "|---|---|---|\n",
     "| **1. Có phải nhóm khách hàng Rời đi có xu hướng phân bố ở hai thái cực không? Một phần là những người sử dụng quá ít và một phần là những người sử dụng quá mức?** | **Why:** Nhóm muốn kiểm tra xem yếu tố sử dụng thể là một feature tốt để dự đoán khách hàng rời đi hay không. Ví dụ khách hàng sử dụng quá ít dịch vụ cho thấy sự thờ ơ; khách hàng sử dụng quá mức có thể tìm kiếm sản phẩm chuyên biệt ở nơi khác.<br>**Who:** Bộ phận Quản lý quan hệ khách hàng, Phân tích dữ liệu, và Kinh doanh/Tiếp thị. | **Insights:** Phần thái cực \"sử dụng quá mức\" có thể là dấu hiệu họ đang chuyển dòng tiền hoặc chuyển hoạt động giao dịch chính sang ngân hàng khác. Phần thái cực \"sử dụng quá ít\" có thể là do họ cảm thấy thẻ không cần thiết nữa và bỏ đi.<br>**Decision:** Can thiệp bằng các ưu đãi tăng cường giá trị/khuyến khích sử dụng.|\n",
-    "| **2. Liệu nhóm khách hàng có thu nhập cao nhưng trình độ học vấn thấp có xu hướng \"vung tay quá trán\" và duy trì dư nợ quay vòng (`Total_Revolving_Bal`) cao hơn nhóm có học vấn cao không?** | **Why:** Nhóm em muốn kiểm chứng xem liệu trình độ học vấn có ảnh hưởng gì đến việc quản lý tài chính không. Ví dụ như người học vấn thấp sẽ tiêu xài hoang phí, người học vấn cao sẽ chi tiêu hợp lý.<br>**Who:** Bộ phận Phân tích dữ liệu (Data Analytics), Marketing và Quản lý danh mục khách hàng (Customer Portfolio Management). | **Insights:** Xác định được nhóm khách hàng nào “nhạy cảm” hơn với nợ quay vòng. Điều này phản ánh sự khác biệt về khả năng chịu đựng nợ và ưu tiên tài chính giữa các nhóm hộ gia đình.<br>**Decision:** Thiết kế các chiến lược giữ chân theo phân khúc: với nhóm gia đình lớn, ưu tiên các chương trình **giảm lãi, trả góp linh hoạt, hoặc tư vấn quản lý nợ** khi số dư quay vòng tăng; với nhóm độc thân, tập trung vào **ưu đãi trải nghiệm, hoàn tiền và phần thưởng** thay vì can thiệp tài chính sớm.\n",
-    "| **3. Có mối tương quan nào giữa tuổi khách hàng (`Customer_Age`), thời gian sử dụng thẻ (`Months_on_book`) và tỷ lệ churn không?** | **Why:** Tuổi và thời gian sử dụng thẻ phản ánh mức độ gắn kết và giai đoạn cuộc sống của khách hàng. Khách trẻ thường linh hoạt, dễ rời bỏ do thay đổi công việc hoặc nhu cầu, trong khi khách lâu năm có thể rời bỏ vì sản phẩm không còn phù hợp.<br>**Who:** Bộ phận Giữ chân khách hàng (Retention) và Phát triển sản phẩm (Product Development). | **Insights:** Phát hiện sự khác biệt. Khách hàng lâu năm (36+ tháng) có xu hướng churn khi nhu cầu tăng nhưng quyền lợi không đổi; nhóm khách trẻ có độ trung thành thấp, dễ bị thu hút bởi ưu đãi ngắn hạn từ đối thủ.<br>**Decision:** Không giả định khách lâu năm là an toàn; cá nhân hóa sản phẩm theo độ tuổi và vòng đời khách hàng, đồng thời xây dựng chương trình gắn kết sớm cho khách hàng trẻ. |\n",
-    "| **4. Liệu có phải nhóm khách hàng có hạn mức tín dụng cao (`Credit_Limit`) nhưng mức độ sử dụng thấp (`Utilization`) là nhóm có nguy cơ rời bỏ ngầm cao nhất?** | **Why:** Ngân hàng thường tập trung quản lý rủi ro nợ xấu (xài quá hạn mức), nhưng lại bỏ quên rủi ro \"thờ ơ\" (có thẻ nhưng không dùng).<br>**Who:** Bộ phận Quản trị rủi ro và Phát triển kinh doanh. | **Insights:** Phân biệt được đâu là khách hàng trung thành, đâu là khách hàng \"ngủ đông\" (Inactive VIPs) đang dùng thẻ của đối thủ cạnh tranh.<br>**Decision:** Thay vì tăng hạn mức, ngân hàng cần tung ra các chương trình khuyến khích chi tiêu (Cashback, Rewards) dành riêng cho nhóm VIP đang \"đóng băng\" này. |\n",
+    "| **2. Liệu nhóm khách hàng có thu nhập cao nhưng trình độ học vấn thấp có xu hướng \"vung tay quá trán\" và duy trì dư nợ quay vòng (`Total_Revolving_Bal`) cao hơn nhóm có học vấn cao không?** | **Why:** Nhóm em muốn kiểm chứng xem liệu trình độ học vấn có ảnh hưởng gì đến việc quản lý tài chính không. Ví dụ như người học vấn thấp sẽ tiêu xài hoang phí, người học vấn cao sẽ chi tiêu hợp lý.<br>**Who:** Bộ phận Phân tích dữ liệu, Marketing và Quản lý danh mục khách hàng. | **Insights:** Xác định được nhóm khách hàng nào “nhạy cảm” hơn với nợ quay vòng. Điều này phản ánh sự khác biệt về khả năng chịu đựng nợ và ưu tiên tài chính giữa các nhóm hộ gia đình.<br>**Decision:** Thiết kế các chiến lược giữ chân theo phân khúc: với nhóm gia đình lớn, ưu tiên các chương trình **giảm lãi, trả góp linh hoạt, hoặc tư vấn quản lý nợ** khi số dư quay vòng tăng; với nhóm độc thân, tập trung vào **ưu đãi trải nghiệm, hoàn tiền và phần thưởng** thay vì can thiệp tài chính sớm.\n",
+    "| **3. Có mối tương quan nào giữa tuổi khách hàng (`Customer_Age`), thời gian sử dụng thẻ (`Months_on_book`) và tỷ lệ churn không?** | **Why:** Tuổi và thời gian sử dụng thẻ phản ánh mức độ gắn kết và giai đoạn cuộc sống của khách hàng. Khách trẻ thường linh hoạt, dễ rời bỏ do thay đổi công việc hoặc nhu cầu, trong khi khách lâu năm có thể rời bỏ vì sản phẩm không còn phù hợp.<br>**Who:** Bộ phận Giữ chân khách hàng và Phát triển sản phẩm . | **Insights:** Phát hiện sự khác biệt. Khách hàng lâu năm có thể có xu hướng churn khi họ nhu cầu tăng nhưng quyền lợi không đổi; nhóm khách trẻ có độ trung thành thấp, dễ bị thu hút bởi ưu đãi ngắn hạn từ đối thủ.<br>**Decision:** Không giả định khách lâu năm là an toàn; cá nhân hóa sản phẩm theo độ tuổi và vòng đời khách hàng, đồng thời xây dựng chương trình gắn kết sớm cho khách hàng trẻ. |\n",
+    "| **4. Liệu có phải nhóm khách hàng có hạn mức tín dụng cao (`Credit_Limit`) nhưng mức độ sử dụng thấp (`Utilization`) là nhóm có nguy cơ rời bỏ ngầm cao nhất?** | **Why:** Ngân hàng thường tập trung vào những người quản lý rủi ro nợ xấu (xài quá hạn mức), nhưng lại bỏ quên nhóm người \"thờ ơ\" (có thẻ nhưng không dùng).<br>**Who:** Bộ phận Quản trị rủi ro và Phát triển kinh doanh. | **Insights:** Phân biệt được đâu là khách hàng trung thành, đâu là khách hàng \"ngủ đông\" đang dùng thẻ của đối thủ cạnh tranh.<br>**Decision:** Thay vì tăng hạn mức, ngân hàng cần tung ra các chương trình khuyến khích chi tiêu (Cashback, Rewards) dành riêng cho nhóm VIP đang \"đóng băng\" này. |\n",
     "| **5. Các chỉ số tương tác (`Contacts_Count`, `Months_Inactive`) và giao dịch trong 12 tháng qua (`Total_Trans_Amt`) có mối quan hệ thế nào với quyết định rời bỏ?** | **Why:** Đây là các biến hành vi (Behavioral) phản ánh trực tiếp sự hài lòng (qua số lần phàn nàn) và sự gắn kết (qua tần suất giao dịch).<br>**Who:** Bộ phận Dịch vụ khách hàng (Customer Service). | **Insights:** Tìm ra \"Ngưỡng chịu đựng\" (Threshold). Ví dụ: Khách hàng liên hệ quá 4 lần/năm"
    ]
   },
@@ -1558,7 +1555,7 @@
    "id": "cbb5497e",
    "metadata": {},
    "source": [
-    "#### **2. Tỷ lệ sử dụng hạn mức tín dụng (`Avg_Utilization_Ratio`) có sự khác biệt có ý nghĩa thống kê giữa các nhóm Income_Category kết hợp với `Education_Level` không? Hay nói cách khác, liệu nhóm khách hàng có thu nhập cao nhưng trình độ học vấn thấp có xu hướng \"vung tay quá trán\" và duy trì dư nợ quay vòng (`Total_Revolving_Bal`) cao hơn nhóm có học vấn cao không?**"
+    "#### **2. Liệu nhóm khách hàng có thu nhập cao nhưng trình độ học vấn thấp có xu hướng \"vung tay quá trán\" và duy trì dư nợ quay vòng (`Total_Revolving_Bal`) cao hơn nhóm có học vấn cao không?**"
    ]
   },
   {
@@ -1577,10 +1574,7 @@
     "1. Kiểm tra và xử lý missing values\n",
     "- Loại bỏ các giá trị 'Unknown' trong Income_Category và Education_Level. Việc giữ lại nhóm \"Unknown\" sẽ làm nhiễu kết quả phân tích thống kê\n",
     "\n",
-    "2. Kiểm tra và xử lý giá trị ngoại lai\n",
-    "- Sử dụng phương pháp IQR để xác định và loại bỏ giá trị ngoại lai\n",
-    "\n",
-    "3. Định nghĩa thứ tự logic cho Thu nhập và Học vấn.\n",
+    "2. Định nghĩa thứ tự logic cho Thu nhập và Học vấn.\n",
     "Thu nhập: Từ thấp đến cao (Less than $40K -> $120K+).\n",
     "Học vấn: Từ thấp đến cao (Uneducated -> Doctorate).\n",
     "Lý do: Việc này giúp biểu đồ (Heatmap) hiển thị theo gradient tự nhiên, giúp mắt thường dễ nhận ra xu hướng hơn là để sắp xếp ngẫu nhiên theo bảng chữ cái."
